--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>personium.io</id>
+			<name>personium.io</name>
+			<url>http://personium.io/mvnrepo</url>
+		</repository>
+	</distributionManagement>
 </project>
